# PRAcciolini

./: .dockerignore  .gitignore  .gitmodules  .space.kts  CODEOWNERS  Dockerfile  MANIFEST.in  README.md  pyproject.toml  ruff.toml  run.sh  setup.py
.teamcity/: pom.xml  settings.kts
pracciolini/: __main__.py
pracciolini/codec/: ftrex.py
pracciolini/core/: decorators.py  grammar.py  loading.py  registry.py  saving.py  translation.py  validation.py
pracciolini/grammar/: README.md  translate.py
pracciolini/grammar/canopy/: io.py  utils.py  validate.py
pracciolini/grammar/canopy/io/: Buffer.py  Buffer.pyi  DAGs.py  DAGs.pyi  KofNArgs.py  KofNArgs.pyi  MonteCarloExpectedValueOptions.py  MonteCarloExpectedValueOptions.pyi  OpCode.py  OpCode.pyi  Operator.py  Operator.pyi  OperatorArgs.py  OperatorArgs.pyi  ReshapeArgs.py  ReshapeArgs.pyi  SubGraph.py  SubGraph.pyi  Tensor.py  Tensor.pyi  TensorType.py  TensorType.pyi  __init__.py  pla.py
pracciolini/grammar/canopy/model/: buffer_manager.py  layers.py  operator.py  subgraph.py  tensor.py
pracciolini/grammar/canopy/module/: bitwise.py  broadcast_sampler.py  sampler.py  tree_builder.py
pracciolini/grammar/canopy/probability/: bitpack.py  distributions.py  monte_carlo.py  sampler.py
pracciolini/grammar/canopy/sampler/: sizer.py
pracciolini/grammar/canopy/schema/: pla.fbs
pracciolini/grammar/canopy/stats/: bitpack.py  monte_carlo.py  sampler.py
pracciolini/grammar/ftrex/: README.md  validate.py
pracciolini/grammar/ftrex/ftp/: ftrex_ftp.g4  ftrex_ftp.interp  ftrex_ftp.tokens  ftrex_ftp_lexer.interp  lexer.py  listener.py  parser.py  visitor.py
pracciolini/grammar/openpsa/: main.py  opsamef.py  validate.py
pracciolini/grammar/openpsa/mx/: __init__.py  decorators.py  define.py  factory.py  registry.py  serializable.py
pracciolini/grammar/openpsa/opsa_mef/: __init__.py  attributes.py  base.py  identifier.py
pracciolini/grammar/openpsa/schema/: fault-tree.rng  input.rng  project.rng  report.rng
pracciolini/grammar/openpsa/xml/: __init__.py  attributes.py  define_event.py  expression.py  fault_tree.py  identifier.py  info.py  openpsa_mef.py  opsa_mef.py  reference.py  serializable.py  substitution.py  xml.py  xml_wrapper.py
pracciolini/grammar/saphsolve/: validate.py
pracciolini/grammar/saphsolve/core/: event.py  event_tree.py  fault_tree.py  gate.py  header.py  sequence.py  sysgate.py  trunc_param.py  workspace_pair.py
pracciolini/grammar/saphsolve/jsinp/: dumper.py  jsinp.py  parser.py
pracciolini/grammar/saphsolve/schema/: jsinp.schema.json
pracciolini/serializer/: openpsa_xml_mixin.py
pracciolini/translator/: ftrex_opsamef.py
pracciolini/translator/ftrex_opsamef/: ftrex_opsamef.py  opsamef_xml_visitor.py
pracciolini/translator/opsamef_canopy/: input_tensor_builder.py  opsamef_to_canopy.py  sampler.py  samples.py  tf_mod.py  tf_module.py  translations.py
pracciolini/translator/opsamef_expr/: opsamef_expr.py
pracciolini/translator/saphsolve_canopy/: jsinp_pla.py
pracciolini/translator/saphsolve_opsamef/: README.md
pracciolini/tree/: basic_event.py
pracciolini/utils/: __init__.py  argparser.py  file_ops.py  filter.py  xml.py
tests/: __init__.py
tests/core/: test_decorators.py  test_grammar.py  test_registry.py  test_translation.py
tests/fixtures/fault_tree/: name_500_06.ftp
tests/fixtures/ftrex/: CRW-MFT.ftp  GT-MFT.ftp
tests/fixtures/ftrex/db/: MHTGR-BE.csv  MHTGR-CCF.csv  MHTGR-GT.csv  MHTGR-TC.csv  MHTGR.csv
tests/fixtures/saphsolve/jscut/: demo_gas_leak.json
tests/grammar/canopy/: test_validate_input.py
tests/grammar/canopy/distributions/: test_bitpack_distribution.py
tests/grammar/canopy/io/: test_io_pla.py  test_io_v1_schema.py
tests/grammar/canopy/model/: test_buffer_manager.py  test_subgraph.py  (+3 more)
tests/grammar/saphsolve/: test_validate_input_jsinp.py
tests/translator/: test_canopy_bitpack_tensor.py  test_canopy_tensorflow.py  test_ftrex_opsamef.py  test_opsamef_canopy.py  test_opsamef_expr.py
tests/utils/: test_file_ops.py  test_filter.py
(+295 files in other folders)
